# klinika

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/samples/: BDT-spec.txt  README.md  sample_clinic_bootstrap.bdt  sample_clinic_incremental.bdt  sample_doctolib_calendar.json  sample_lab_results.ldt  test-prompts.md
data/samples/gdt/: gdt_6302_request_schmidt.gdt  gdt_6310_ekg1_00042.gdt  (+2 more)
klinika/: config.py  stage0_chat.py  stage1_agent.py  stage2_agent.py  stage3_clinic.py  stage4_records.py  stage5_labs.py
klinika/agent/: core.py  mcp_client.py
klinika/bridges/: __init__.py  gdt_bridge.py  ldt_watcher.py
klinika/briefings/: __main__.py  generator.py
klinika/drafting/: generator.py  templates.py
klinika/memory/: store.py
klinika/services/: devices.py  drafts.py  labs.py  patients.py
klinika/skills/: store.py
klinika/standards/: bdt.py  gdt.py  ldt.py  xdt.py
klinika/tools/: bdt.py  calendar.py  clock.py  devices.py  drafts.py  ldt.py  memory.py  patients.py  plugins.py  skills.py
klinika/voice/: transcribe.py
klinika/web/: __main__.py  app.py
plugins/: ecg_server.py
scripts/: setup_demo.py  setup_wizard.py
tests/: test_agent.py  test_agent_core.py  test_app_tools.py  test_bdt_parser.py  test_briefing.py  test_calendar.py  test_devices_db.py  test_drafts.py  test_gdt_bridge.py  test_gdt_parser.py  test_labs_db.py  test_ldt_parser.py  test_ldt_watcher.py  test_mcp_client.py  test_memory.py  test_patient_tools.py  test_patients_db.py  test_skills.py  test_xdt.py  test_xdt_parser.py
tests/e2e/: test_e2e.py
(+11 files in other folders)
