[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klinika"
version = "0.1.0"
description = "Local AI cognitive co-pilot for German physicians"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "fastmcp>=2.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["klinika*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
